Rangement et fonctions séparées
Réorganisation, placement des fonctions dans functions.c, création d’un
dossier pour mettre les choses inutiles sans les supprimer.

--- a/inutileMaisAuCasOu/Makefile_Old
+++ b/inutileMaisAuCasOu/Makefile_Old
@@ -1,9 +1,10 @@
 CC       =  gcc
 CFLAGS   = -Wall -O2 -g
-LIB      = -L/usr/local/lib -lSDL -lSDLmain -lSDL_image
+LDFLAGS = 'sdl-config --cflags --libs'
+LIB      = -L/usr/local/lib -lSDL -lSDLmain -lSDL_mixer
 INCLUDES = -I/usr/local/include -framework Cocoa -framework OpenGL
 
-OBJ      = main.o functions.o 
+OBJ      = main.o
 RM       = rm -f
 BIN      = main
 DIRNAME  = $(shell basename $$PWD)
@@ -12,34 +13,28 @@ STDNAME  = $(DIRNAME).tgz
 
 all : $(BIN)
 
-
 $(BIN) : $(OBJ)
 	$(CC) $(CFLAGS) $(OBJ) $(LIB) $(INCLUDES)  -o $(BIN)
 	@echo "--------------------------------------------------------------"
 	@echo "                 to execute type: ./$(BIN) &"
 	@echo "--------------------------------------------------------------"
 
-main.o : main.c functions.c 
+main.o : main.c
 	@echo "compile main"
-	$(CC) $(CFLAGS) $(LIB) $(INCLUDES) -c $<  
+	$(CC) $(CFLAGS) $(LIB) $(INCLUDES) -c $<
 	@echo "done..."
 
-functions.o : functions.c
-	@echo "compile functions"
-	$(CC) $(CFLAGS) $(LIB) $(INCLUDES) -c $<  
-	@echo "done..."
-
-
-
-clean :	
+clean :
 	@echo "**************************"
 	@echo "CLEAN"
 	@echo "**************************"
-	$(RM) *~ $(OBJ) $(BIN) 
+	$(RM) *~ $(OBJ) $(BIN)
 
-tar : clean 
+tar : clean
 	@echo "**************************"
 	@echo "TAR"
 	@echo "**************************"
 	cd .. && tar cvfz $(BACKUP) $(DIRNAME)
 
+
+#gcc -Wall -framework OpenGL -lSDL -lSDLmain -framework cocoa -o exo5 exo5.c
