--- a/makefile_linux
+++ b/makefile_linux
@@ -1,44 +1,46 @@
 CC       =  gcc
 CFLAGS   = -Wall -O2 -g
 LIB      = -lSDL -lGLU -lGL -lm -lSDL_image
-INCLUDES =
-
-SRC_PATH = src
-OBJ_PATH = obj
-INC_PATH = -I include
-BIN_PATH = bin
-LIB_PATH = lib
-
-SRC_FILES = $(shell find $(SRC_PATH) -type f -name '*.c')
-OBJ_FILES = $(patsubst $(SRC_PATH)/%.c,$(OBJ_PATH)/%.o, $(SRC_FILES))
+INCLUDES = 
 
 OBJ      = main.o functions.o
 RM       = rm -f
-BIN      = IMACWasAlone
+BIN      = main
 DIRNAME  = $(shell basename $$PWD)
 BACKUP   = $(shell date +`basename $$PWD`-%m.%d.%H.%M.tgz)
 STDNAME  = $(DIRNAME).tgz
 
+
+
 all : $(BIN)
 
-$(BIN): $(OBJ_FILES)
-	$(CC) $(CFLAGS) $(OBJ_FILES) $(LIB) $(INCLUDES) -o $(BIN)
+
+$(BIN) : $(OBJ)
+	$(CC) $(CFLAGS) $(OBJ) $(LIB) $(INCLUDES)  -o $(BIN)
 	@echo "--------------------------------------------------------------"
 	@echo "                 to execute type: ./$(BIN) &"
 	@echo "--------------------------------------------------------------"
 
-$(OBJ_PATH)/%.o: $(SRC_PATH)/%.c
-	@mkdir -p "$(@D)"
-	$(CC) -c $< -o $@ $(CFLAGS) $(INC_PATH)
+main.o : main.c functions.c
+	@echo "compile main"
+	$(CC) $(CFLAGS) $(LIB) $(INCLUDES) -c $<  
+	@echo "done..."
 
-clean :
+
+functions.o : functions.c
+	@echo "compile functions"
+	$(CC) $(CFLAGS) $(LIB) $(INCLUDES) -c $<  
+	@echo "done..."
+
+clean :	
 	@echo "**************************"
 	@echo "CLEAN"
 	@echo "**************************"
-	$(RM) *~ $(OBJ_FILES) $(BIN)
+	$(RM) *~ $(OBJ) $(BIN) 
 
-tar : clean
+tar : clean 
 	@echo "**************************"
 	@echo "TAR"
 	@echo "**************************"
 	cd .. && tar cvfz $(BACKUP) $(DIRNAME)
+
